# Backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: graphql.py
scripts/: test.py
tests/: test_graphql.py
